--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </section>
 
     <section id="page3" class="page">
-      <h1>Trang 3 — Mô hình đồ gốm Sa Huỳnh</h1>
+      <h1> Đồ gốm Sa Huỳnh</h1>
       <div class="two-col" style="margin-top:12px">
         <div class="col-left">
           <model-viewer src="https://modelviewer.dev/shared-assets/models/Astronaut.glb" alt="Mô hình A" camera-controls auto-rotate ar ar-modes="webxr scene-viewer quick-look" ios-src="" exposure="1"></model-viewer>
@@ -98,7 +98,7 @@
     </section>
 
     <section id="page4" class="page">
-      <h1>Trang 4 — đồ gốm Đông Sơn</h1>
+      <h1>Đồ gốm Đông Sơn</h1>
       <div class="two-col" style="margin-top:12px">
         <div class="col-left">
           <model-viewer src="https://modelviewer.dev/shared-assets/models/CartoonCow.glb" alt="Mô hình B" camera-controls auto-rotate ar ar-modes="webxr scene-viewer quick-look"></model-viewer>
