--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 </head>
 <body>
   <div class="app">
+
+    <!-- PAGE 1: Hướng dẫn -->
     <main id="page1" class="page active">
       <h1>Hướng dẫn nhanh</h1>
       <p class="muted">Kéo xuống để xem từng bước. Ở mỗi bước có ảnh minh họa. Sau bước cuối bấm NEXT để sang trang chính.</p>
@@ -57,22 +59,37 @@
       </div>
     </main>
 
+    <!-- PAGE 2: Chọn đồ gốm -->
     <section id="page2" class="page">
       <h1>Chọn đồ gốm cần xem</h1>
-      <p class="muted">Chọn 1 trong 2 đồ gốm để xem chi tiết.</p>
+      <p class="muted">Chọn 1 trong 4 đồ gốm để xem chi tiết.</p>
       <div class="nav-grid" style="margin-top:18px">
         <div class="card">
-          <h3> Đồ gốm Sa Huỳnh </h3>
+          <h3>Đồ gốm Sa Huỳnh</h3>
           <p class="muted">Mô tả ngắn mô hình đồ gốm Sa Huỳnh.</p>
           <div style="margin-top:auto;display:flex;gap:8px">
             <button class="btn" onclick="showPage('page3')">Vô xem</button>
           </div>
         </div>
         <div class="card">
-          <h3> Đồ gốm Đông Sơn </h3>
+          <h3>Đồ gốm Đông Sơn</h3>
           <p class="muted">Mô tả ngắn mô hình đồ gốm Đông Sơn.</p>
           <div style="margin-top:auto;display:flex;gap:8px">
             <button class="btn" onclick="showPage('page4')">Vô xem</button>
+          </div>
+        </div>
+        <div class="card">
+          <h3>Đồ gốm Hòa Bình</h3>
+          <p class="muted">Mô tả ngắn mô hình đồ gốm Hòa Bình.</p>
+          <div style="margin-top:auto;display:flex;gap:8px">
+            <button class="btn" onclick="showPage('page5')">Vô xem</button>
+          </div>
+        </div>
+        <div class="card">
+          <h3>Đồ gốm Bắc Sơn</h3>
+          <p class="muted">Mô tả ngắn mô hình đồ gốm Bắc Sơn.</p>
+          <div style="margin-top:auto;display:flex;gap:8px">
+            <button class="btn" onclick="showPage('page6')">Vô xem</button>
           </div>
         </div>
       </div>
@@ -81,11 +98,13 @@
       </div>
     </section>
 
+    <!-- PAGE 3: Sa Huỳnh -->
     <section id="page3" class="page">
-      <h1> Đồ gốm Sa Huỳnh</h1>
+      <h1>Đồ gốm Sa Huỳnh</h1>
       <div class="two-col" style="margin-top:12px">
         <div class="col-left">
-          <model-viewer src="https://modelviewer.dev/shared-assets/models/Astronaut.glb" alt="Mô hình A" camera-controls auto-rotate ar ar-modes="webxr scene-viewer quick-look" ios-src="" exposure="1"></model-viewer>
+          <model-viewer src="https://modelviewer.dev/shared-assets/models/Astronaut.glb" alt="Mô hình A"
+            camera-controls auto-rotate ar ar-modes="webxr scene-viewer quick-look"></model-viewer>
         </div>
         <div class="col-right">
           <h2>Chi tiết về đồ gốm Sa Huỳnh</h2>
@@ -97,15 +116,16 @@
       </div>
     </section>
 
+    <!-- PAGE 4: Đông Sơn -->
     <section id="page4" class="page">
       <h1>Đồ gốm Đông Sơn</h1>
       <div class="two-col" style="margin-top:12px">
         <div class="col-left">
-          <model-viewer src="https://modelviewer.dev/shared-assets/models/CartoonCow.glb" alt="Mô hình B" camera-controls auto-rotate ar ar-modes="webxr scene-viewer quick-look"></model-viewer>
+          <model-viewer src="https://modelviewer.dev/shared-assets/models/CartoonCow.glb" alt="Mô hình B"
+            camera-controls auto-rotate ar ar-modes="webxr scene-viewer quick-look"></model-viewer>
         </div>
         <div class="col-right">
           <h2>Chi tiết đồ gốm Đông Sơn</h2>
-          
           <div style="margin-top:auto;display:flex;gap:8px">
             <button class="btn" onclick="showPage('page2')">Quay lại trang chọn</button>
             <button class="btn secondary" onclick="showPage('page3')">Sang mô hình Sa Huỳnh</button>
@@ -113,14 +133,56 @@
         </div>
       </div>
     </section>
+
+    <!-- PAGE 5: Hòa Bình -->
+    <section id="page5" class="page">
+      <h1>Đồ gốm Hòa Bình</h1>
+      <div class="two-col" style="margin-top:12px">
+        <div class="col-left">
+          <model-viewer src="https://modelviewer.dev/shared-assets/models/RobotExpressive.glb" alt="Mô hình Hòa Bình"
+            camera-controls auto-rotate ar ar-modes="webxr scene-viewer quick-look"></model-viewer>
+        </div>
+        <div class="col-right">
+          <h2>Chi tiết đồ gốm Hòa Bình</h2>
+          <div style="margin-top:auto;display:flex;gap:8px">
+            <button class="btn" onclick="showPage('page2')">Quay lại trang chọn</button>
+            <button class="btn secondary" onclick="showPage('page6')">Sang mô hình Bắc Sơn</button>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- PAGE 6: Bắc Sơn -->
+    <section id="page6" class="page">
+      <h1>Đồ gốm Bắc Sơn</h1>
+      <div class="two-col" style="margin-top:12px">
+        <div class="col-left">
+          <model-viewer src="https://modelviewer.dev/shared-assets/models/NeilArmstrong.glb" alt="Mô hình Bắc Sơn"
+            camera-controls auto-rotate ar ar-modes="webxr scene-viewer quick-look"></model-viewer>
+        </div>
+        <div class="col-right">
+          <h2>Chi tiết đồ gốm Bắc Sơn</h2>
+          <div style="margin-top:auto;display:flex;gap:8px">
+            <button class="btn" onclick="showPage('page2')">Quay lại trang chọn</button>
+            <button class="btn secondary" onclick="showPage('page5')">Sang mô hình Hòa Bình</button>
+          </div>
+        </div>
+      </div>
+    </section>
+
   </div>
 
   <script>
     function showPage(id){
-      const pages = ['page1','page2','page3','page4'];
-      pages.forEach(p=>{const el=document.getElementById(p);if(!el) return;el.classList.toggle('active', p===id)});
+      const pages = ['page1','page2','page3','page4','page5','page6'];
+      pages.forEach(p=>{
+        const el=document.getElementById(p);
+        if(!el) return;
+        el.classList.toggle('active', p===id)
+      });
       window.scrollTo({top:0,behavior:'smooth'});
     }
+
     function downloadGuide(){
       const md = `# Hướng dẫn deploy site 3D\n\n- Đặt file .glb vào thư mục models/ trong repo.\n- Đặt ảnh vào images/.\n- Sửa src của <model-viewer> thành /models/tenfile.glb\n- Commit và push lên GitHub. Bật GitHub Pages (branch: main, folder: /).`;
       const blob = new Blob([md],{type:'text/markdown'});
@@ -129,9 +191,10 @@
       a.download = 'Hướng-dẫn-deploy.md';
       document.body.appendChild(a);a.click();a.remove();
     }
+
     (function(){
       const hash = location.hash.replace('#','');
-      if(['page1','page2','page3','page4'].includes(hash)) showPage(hash);
+      if(['page1','page2','page3','page4','page5','page6'].includes(hash)) showPage(hash);
     })();
   </script>
 </body>
