--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
       <h1>Hướng dẫn nhanh</h1>
       <div class="steps-wrap">
         <section class="step" id="step1">
-          <h2>Bước 1 — Giới thiệu</h2>
+          <h2>Bước 1 — Chọn đồ gốm bạn muốn xem bằng cách bấm vào "Vô xem" ở dưới</h2>
           <img src="https://via.placeholder.com/800x450?text=Ảnh+Bước+1">
         </section>
         <section class="step" id="step2">
-          <h2>Bước 2 — Cấu trúc thư mục</h2>
+          <h2>Bước 2 — Chờ để mô hình 3D load xong</h2>
           <img src="https://via.placeholder.com/800x450?text=Ảnh+Bước+2">
         </section>
         <section class="step" id="step3">
-          <h2>Bước 3 — Cách nhúng mô hình</h2>
+          <h2>Bước 3 — Sau khi xem bấm vào "Quay lại trang chọn" để quay về xem đồ gốm khác</h2>
           <img src="https://via.placeholder.com/800x450?text=Ảnh+Bước+3">
         </section>
       </div>
